# micro-services

./: .gitignore  README.md  streaming_price_tracker.py
extract_public_ip/: .env.example  README.md  deploy.sh  extract_public_ip_address.cron  extract_public_ip_address.py  extract_public_ip_address_with_logging.py  requirements.txt
internet_watchdog/: README.md  watchdog.py
ip_upload/: .env.example  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  ip_upload_with_logging.py  requirements.txt
network_autopilot/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
network_autopilot/src/network_autopilot/: __main__.py  __main__with_logging.py  cloudflare.py  network_autopilot.py  update_vpn_ddns.py  utils.py
network_autopilot/tests/: test_ip_utils.py  test_to_local_time.py  test_update_dns_record.py
router_reset/: .env.example  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh
update_dns/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  TUNING.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
update_dns/docs/: TUNING.md  VPN-DNS-STACK.md
update_dns/src/update_dns/: __main__.py  agent.py  bootstrap.py  cache.py  cloudflare.py  config.py  ddns_controller.py  google_sheets.py  google_sheets_service.py  gsheets_service.py  infra_agent.py  logger.py  readiness.py  recovery.py  recovery_controller.py  recovery_policy.py  sanity.py  scheduling_policy.py  telemetry.py  time_service.py  utils.py  wan_fsm.py  watchdog.py
update_dns/tests/: test_cloudflare.py  test_ip_utils.py  test_logger.py  test_to_local_time.py  test_update_dns_record.py  test_utils.py  test_watchdog.py
update_vpn_ddns/: .env.example  DELETE  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  tmp.file  (+1 more)
(+8 files in other folders)
